<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|center_horizontal"
    android:orientation="vertical"
    tools:context=".PromptActivity">

    <TextView
        android:id="@+id/tip_confirm_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_prompt" />

    <Button
        android:id="@+id/tip_button_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_tip_confirm" />

    <TextView
        android:id="@+id/tip_text"
        android:layout_width="71dp"
        android:layout_height="41dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/previous_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_previous" />

</LinearLayout>